--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -2,3 +2,18 @@
     --bgcolor : #F3F2F2;
     --disablecolor: #434343;
 }
+
+// Source mixin
+@mixin make-container($padding-x: $container-padding-x) {
+    width: 100%;
+    padding-right: $padding-x;
+    padding-left: $padding-x;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  // Usage
+  .custom-container {
+    @include make-container(4vw);
+  }
+  
