added new project image and code

--- a/style/_portfolio.scss
+++ b/style/_portfolio.scss
@@ -66,7 +66,7 @@
                     }
 
                     &-ecommerce{
-                        background-image: url(/aluracord.png);
+                        background-image: url(/portfolio-ecommerce.png);
                     }
 
                     &-chat{
